add everest gold client replace polaris logo with new design

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
-  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">    
+  <meta name="description"
+        content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="keywords"
+        content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">
   <meta charset="utf-8">
   <meta property="og:title" content="Verichains">
   <meta property="og:description" content="Verichains - Driving Technology Forward">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/">
-    
+
   <title>Verichains</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -97,7 +99,8 @@
 </div>
 
 <div class="main-container">
-  <section class="height-70 slider slider--animate cover cover-3" data-paging="true" data-arrows="true" data-timing="8000">
+  <section class="height-70 slider slider--animate cover cover-3" data-paging="true" data-arrows="true"
+           data-timing="8000">
     <ul class="slides">
       <li class="imagebg" data-overlay="6">
         <div class="background-image-holder">
@@ -109,7 +112,8 @@
               <h3><b>Verichains Lab</b></h3>
               <blockquote class="blockquote"><p class="mb-0 text-justify">
                 Our Lab has a world-class team with extensive research and development expertise in
-                the areas of security, AI and blockchain technology. <br>Together, we are driving technology &gt; forward!</p>
+                the areas of security, AI and blockchain technology. <br>Together, we are driving technology &gt;
+                forward!</p>
               </blockquote>
               <br>
               <a class="btn btn-md" href="team.html">
@@ -228,13 +232,18 @@
       </li>
       <li>
         <a href="https://tomochain.com/" target="_blank">
-        <img alt="Pic" src="assets/images/clients/tomochain.png">
+          <img alt="Pic" src="assets/images/clients/tomochain.png">
+        </a>
+        <a href="https://www.everestgold.sg/" target="_blank">
+          <img alt="Pic" src="assets/images/clients/everest-gold.png" style="padding: 12px;">
         </a>
         <a href="https://www.juncapital.io/" target="_blank">
           <img alt="Pic" src="assets/images/partners/jun.png">
         </a>
+      </li>
+      <li>
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
-        <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/polaris.png" style="padding: 14px;">
         <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
@@ -279,7 +288,7 @@
         </a>
       </li>
       <li class="row">
-        <a href="https://tomochain.com/" target="_blank">        
+        <a href="https://tomochain.com/" target="_blank">
           <img alt="Pic" src="assets/images/clients/tomochain.png">
         </a>
         <a href="https://www.juncapital.io/" target="_blank">
