add Huy and Tin to team remove Bach

--- a/team.html
+++ b/team.html
@@ -241,14 +241,15 @@
               prizes in some competitive programming contests in past years.</p>
           </div>
         </div>
+
         <div class="col-sm-6 col-xs-12 col-md-4">
           <div class="member member-1">
-            <img alt="pic" src="assets/images/team/vubach.jpg">
-            <h6>VeriChains Vietnam, Mobile Developer</h6>
-            <h5>Bach Vu</h5>
-            <p class="text-justify">Bach got Bachelor degree from Posts & Telecommunications Institute of Technology and has 5+
-              years of experience in Mobile Development, UI/UX Design. Past projects have include iOs and Android for
-              mobile application, business analysis.</p>
+            <img alt="pic" src="assets/images/team/tintran.jpg">
+            <h6>VeriChains Vietnam, Developer</h6>
+            <h5>Tin Tran</h5>
+            <p class="text-justify">
+              Black hat Hacker.
+            </p>
           </div>
         </div>
       </div>
@@ -290,6 +291,17 @@
             <p class="text-justify">
               Nga is a designer at Verichains Vietnam with UI and develop product ideas. Previously, she has 3+ years of
               experience in advertising company.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-xs-12 col-md-4">
+          <div class="member member-1">
+            <img alt="pic" src="assets/images/team/huyle.jpg">
+            <h6>VeriChains Vietnam, Developer</h6>
+            <h5>Huy Le</h5>
+            <p class="text-justify">
+              Football striker.
             </p>
           </div>
         </div>
