--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
-  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">    
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">
   <meta property="og:title" content="Verichains - Contact Us">
   <meta property="og:description" content="Contact us for any inquiries, questions or commendations">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/contact.html">
-    
+
   <title>Verichains - Contact Us</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,7 +140,7 @@
     </div>
     <div class="map-container" style="height: 450px;">
       <iframe class="location-map" id="location-hochiminh"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.6112098652115!2d106.70060061524711!3d10.76441729232967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f6afe2a52cf%3A0x8d3b0b224016eb59!2sWework E.Town+Central!5e0!3m2!1svi!2s!4v1558114736178!5m2!1svi!2s"></iframe>
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15678.657778498255!2d106.6990936!3d10.7603234!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1802e764b3059cae!2sCirCO%20Coworking%20Space!5e0!3m2!1svi!2s!4v1591947495203!5m2!1svi!2s"></iframe>
       <iframe class="location-map" id="location-singapore"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.830600810652!2d103.8436417147539!3d1.274931499070104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1914a72353ad%3A0x76a7d94f863aa76f!2s11+Anson+Rd%2C+Xinh-ga-po+079914!5e0!3m2!1svi!2s!4v1558587258452!5m2!1svi!2s"
               width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -165,7 +165,7 @@
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/2000px-Flag_of_Vietnam.svg.png"
             height="48">
         <h4>Ho Chi Minh Office</h4>
-        <p>WeWork E.Town Central<br>11 Doan Van Bo, Ward 12<br> District 4, Ho Chi Minh City, Vietnam</p>
+        <p>CirCO Coworking Space<br>384 Hoang Dieu, Ward 6<br> District 4, Ho Chi Minh City, Vietnam</p>
       </div>
     </div>
     <div class="feature bg--secondary col-md-4 text-center hanoi-background location">
