change member position

--- a/team.html
+++ b/team.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Verichains Lab has a world-class team with extensive research and development expertise in the areas of security, AI and blockchain technology">
-  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">    
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">
   <meta property="og:title" content="Verichains - About us">
   <meta property="og:description" content="Verichains Lab has a world-class team with extensive research and development expertise in the areas of security, AI and blockchain technology">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/team.html">
-    
+
   <title>Verichains - About us</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -102,7 +102,7 @@
   <section class="bg--white">
     <div class="container">
       <h3 class="text-center">Meet our team</h3><br>
-      <div class="row">     
+      <div class="row">
         <div class="col-sm-6 col-xs-12 col-md-4">
           <div class="member member-1">
               <div class="text-center"><img class="img-fluid mx-auto" alt="pic" src="assets/images/team/thanh.jpg"></div>
@@ -157,14 +157,14 @@
             <img alt="pic" src="assets/images/team/kaijern.jpg">
             <h6>VeriChains Lab, Researcher</h6>
             <h5>Kaijern Lau</h5>
-            <p class="text-justify">	    
-	      <a href="https://www.linkedin.com/in/kaijern-lau-8a847417" target="_blank">KaiJern (xwings)</a>, is Lab 
-		Director of The ShepherdLab, of JD.com Security. His research topic mainly on embedded device, hardware 
-		security, blockchain security, reverse engineering and various security topics. He presented his findings 
-		in different international security conferences like Defcon, HITB, Codegate, QCon, KCon, Brucon, H2HC and 
-		etc. He conducted hardware Hacking course in various places around the globe. He is also the owner of 
+            <p class="text-justify">
+	      <a href="https://www.linkedin.com/in/kaijern-lau-8a847417" target="_blank">KaiJern (xwings)</a>, is Lab
+		Director of The ShepherdLab, of JD.com Security. His research topic mainly on embedded device, hardware
+		security, blockchain security, reverse engineering and various security topics. He presented his findings
+		in different international security conferences like Defcon, HITB, Codegate, QCon, KCon, Brucon, H2HC and
+		etc. He conducted hardware Hacking course in various places around the globe. He is also the owner of
 		hackersbadge.com, actively involved in Unicorn (<a href="https://unicorn-engine.org">
-		https://unicorn-engine.org</a>) development and founder of Qiling Framework 
+		https://unicorn-engine.org</a>) development and founder of Qiling Framework
 		(<a href="https://qiling.io">https://qiling.io</a>)</p>
           </div>
         </div>
@@ -241,15 +241,12 @@
               prizes in some competitive programming contests in past years.</p>
           </div>
         </div>
-
         <div class="col-sm-6 col-xs-12 col-md-4">
           <div class="member member-1">
-            <img alt="pic" src="assets/images/team/tintran.jpg">
-            <h6>VeriChains Vietnam, Developer</h6>
-            <h5>Tin Tran</h5>
-            <p class="text-justify">
-              Black hat Hacker.
-            </p>
+            <img alt="pic" src="assets/images/team/thaihoang.jpg">
+            <h6>VeriChains Vietnam, Backend Developer</h6>
+            <h5>Thai Hoang</h5>
+            <p class="text-justify">Thai is a backend developer at Verichains.</p>
           </div>
         </div>
       </div>
@@ -274,17 +271,6 @@
         </div>
         <div class="col-sm-6 col-xs-12 col-md-4">
           <div class="member member-1">
-            <img alt="pic" src="assets/images/team/thaihoang.jpg">
-            <h6>VeriChains Vietnam, Backend Developer</h6>
-            <h5>Thai Hoang</h5>
-            <p class="text-justify">Thai is a backend developer at Verichains.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-6 col-xs-12 col-md-4">
-          <div class="member member-1">
             <img alt="pic" src="assets/images/team/ngale.jpg">
             <h6>VeriChains Vietnam, Designer</h6>
             <h5>Nga Le</h5>
@@ -294,14 +280,25 @@
             </p>
           </div>
         </div>
-
+      </div>
+      <div class="col-sm-6 col-xs-12 col-md-4">
+        <div class="member member-1">
+          <img alt="pic" src="assets/images/team/tintran.jpg">
+          <h6>VeriChains Vietnam, Developer</h6>
+          <h5>Tin Tran</h5>
+          <p class="text-justify">
+            Black hat Hacker.
+          </p>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-sm-6 col-xs-12 col-md-4">
           <div class="member member-1">
             <img alt="pic" src="assets/images/team/huyle.jpg">
             <h6>VeriChains Vietnam, Developer</h6>
             <h5>Huy Le</h5>
             <p class="text-justify">
-              Football striker.
+              Football super striker.
             </p>
           </div>
         </div>
