revert CNAME file fix tin's bio

--- a/team.html
+++ b/team.html
@@ -335,8 +335,7 @@
                     <h6>VeriChains Vietnam, Developer</h6>
                     <h5>Tin Tran</h5>
                     <p class="text-justify">
-                        Tin is a full-stack developer, security researcher at Verichains. Currently, he is studying at
-                        Ho Chi Minh City University of Technology.
+                        Tin is a full-stack developer, security researcher at Verichains.
                     </p>
                 </div>
             </div>
