--- a/team.html
+++ b/team.html
@@ -335,7 +335,9 @@
                     <h6>VeriChains Vietnam, Developer</h6>
                     <h5>Tin Tran</h5>
                     <p class="text-justify">
-                        Tin is a full-stack developer, security researcher at Verichains.
+                        Tin is a security researcher, also a backend developer at Verichains. He has participated in
+                        many security contests as a member of Efiens team in HCMUT. He got some prizes in National
+                        Security Contests.
                     </p>
                 </div>
             </div>
