update partner fix polaris logo

--- a/services.html
+++ b/services.html
@@ -183,14 +183,22 @@
         </a>
       </li>
       <li>
-        <a href="https://tomochain.com/" target="_blank">        
+        <a href="https://tomochain.com/" target="_blank">
           <img alt="Pic" src="assets/images/clients/tomochain.png">
+        </a>
+        <a href="https://www.everestgold.sg/" target="_blank">
+          <img alt="Pic" src="assets/images/clients/everest-gold.png"
+               style="padding: 16px;margin-right: 16px">
         </a>
         <a href="https://www.juncapital.io/" target="_blank">
           <img alt="Pic" src="assets/images/partners/jun.png">
         </a>
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
-        <img alt="Pic" src="assets/images/partners/polaris.png">
+      </li>
+      <li>
+        <a href="https://polarisec.com" target="_blank">
+          <img alt="Pic" src="assets/images/partners/polaris.svg" style="padding: 20px;">
+        </a>
         <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
@@ -235,7 +243,7 @@
         </a>
       </li>
       <li class="row">
-        <a href="https://tomochain.com/" target="_blank">        
+        <a href="https://tomochain.com/" target="_blank">
           <img alt="Pic" src="assets/images/clients/tomochain.png">
         </a>
         <a href="https://www.juncapital.io/" target="_blank">
@@ -244,8 +252,12 @@
       </li>
       <li class="row">
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
-        <img alt="Pic" src="assets/images/partners/polaris.png">
         <img alt="Pic" src="assets/images/partners/klaytn.png">
+      </li>
+      <li class="row">
+        <a href="https://polarisec.com" target="_blank">
+          <img alt="Pic" src="assets/images/partners/polaris.svg" style="padding: 20px;">
+        </a>
       </li>
     </ul>
   </section>
