--- a/index.html
+++ b/index.html
@@ -231,6 +231,17 @@
                     <img alt="Pic" src="assets/images/clients/kleros.png">
                 </a>
             </li>
+            <li class="row">
+                <a href="https://xpool.app/" target="_blank" style="margin-right: 36px;">
+                    <img alt="Pic" src="assets/images/clients/x-pool.svg">
+                </a>
+                <a href="https://bscex.org/" target="_blank" style="margin-right: 36px;">
+                    <img alt="Pic" src="assets/images/clients/bscex.png">
+                </a>
+                <a href="https://roseon.finance/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/roseon.png">
+                </a>
+            </li>
             <li>
                 <a href="https://tomochain.com/" target="_blank">
                     <img alt="Pic" src="assets/images/clients/tomochain.png">
@@ -289,6 +300,19 @@
                 </a>
                 <a href="https://kleros.io/" target="_blank">
                     <img alt="Pic" src="assets/images/clients/kleros.png">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://xpool.app/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/x-pool.svg" style="max-width: 40%;margin-right: 16px;">
+                </a>
+                <a href="https://bscex.org/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/bscex.png" style="max-width: 40%; height: 70px">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://roseon.finance/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/roseon.png">
                 </a>
             </li>
             <li class="row">
