--- a/partners.html
+++ b/partners.html
@@ -215,6 +215,36 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-md-4 col-sm-6 col-sm-12">
+                    <a href="https://xpool.app/" target="_blank">
+                        <div class="card card-7">
+                            <div class="card__image">
+                                <img alt="Pic" src="assets/images/clients/x-pool.svg"
+                                     style="padding: 16px;margin-right: 16px">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6 col-sm-12">
+                    <a href="https://bscex.org/" target="_blank">
+                        <div class="card card-7">
+                            <div class="card__image">
+                                <img alt="Pic" src="assets/images/clients/bscex.png"
+                                     style="padding: 16px;margin-right: 16px">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6 col-sm-12">
+                    <a href="https://roseon.finance/" target="_blank">
+                        <div class="card card-7">
+                            <div class="card__image">
+                                <img alt="Pic" src="assets/images/clients/roseon.png"
+                                     style="padding: 16px;margin-right: 16px">
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 
