--- a/services.html
+++ b/services.html
@@ -147,120 +147,144 @@
     </ul>
   </section>
 
-  <section class="container slider clients-section hidden-xs hidden-sm"
-           data-arrows="true"
-           data-paging="false"
-           data-timing="5000"
-           style="margin-top: 70px"
-  >
-    <ul class="slides" style="text-align: center">
-      <li class="row">
-        <a href="https://kyber.network/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/kyber.png">
-        </a>
-        <a href="https://request.network/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/request-network.png">
-        </a>
-        <a href="https://drivezy.com/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/drivezy.png">
-        </a>
-        <a href="https://sentinelprotocol.io/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/sentinel-protocol.png">
-        </a>
-      </li>
-      <li class="row">
-        <a href="https://joyso.io/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/joyso.png">
-        </a>
-        <a href="https://quarkchain.io/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/quark-chain.png">
-        </a>
-        <a href="https://www.drep.org/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/drep.png">
-        </a>
-        <a href="https://kleros.io/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/kleros.png">
-        </a>
-      </li>
-      <li>
-        <a href="https://tomochain.com/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/tomochain.png">
-        </a>
-        <a href="https://www.everestgold.sg/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/everest-gold.png"
-               style="padding: 16px;margin-right: 16px">
-        </a>
-        <a href="https://www.juncapital.io/" target="_blank">
-          <img alt="Pic" src="assets/images/partners/jun.png">
-        </a>
-        <img alt="Pic" src="assets/images/partners/blockcelerate.png">
-      </li>
-      <li>
-        <a href="https://polarisec.com" target="_blank">
-          <img alt="Pic" src="assets/images/partners/polaris.svg" style="padding: 20px;">
-        </a>
-        <img alt="Pic" src="assets/images/partners/klaytn.png">
-      </li>
-    </ul>
-  </section>
+    <section class="container slider clients-section hidden-xs hidden-sm"
+             data-arrows="true"
+             data-paging="false"
+             data-timing="5000"
+             style="margin-top: 70px"
+    >
+        <ul class="slides" style="text-align: center">
+            <li class="row">
+                <a href="https://kyber.network/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/kyber.png">
+                </a>
+                <a href="https://request.network/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/request-network.png">
+                </a>
+                <a href="https://drivezy.com/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/drivezy.png">
+                </a>
+                <a href="https://sentinelprotocol.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/sentinel-protocol.png">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://joyso.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/joyso.png">
+                </a>
+                <a href="https://quarkchain.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/quark-chain.png">
+                </a>
+                <a href="https://www.drep.org/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/drep.png">
+                </a>
+                <a href="https://kleros.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/kleros.png">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://xpool.app/" target="_blank" style="margin-right: 36px;">
+                    <img alt="Pic" src="assets/images/clients/x-pool.svg">
+                </a>
+                <a href="https://bscex.org/" target="_blank" style="margin-right: 36px;">
+                    <img alt="Pic" src="assets/images/clients/bscex.png">
+                </a>
+                <a href="https://roseon.finance/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/roseon.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://tomochain.com/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/tomochain.png">
+                </a>
+                <a href="https://www.everestgold.sg/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/everest-gold.png"
+                         style="padding: 16px;margin-right: 16px">
+                </a>
+                <a href="https://www.juncapital.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/partners/jun.png">
+                </a>
+                <img alt="Pic" src="assets/images/partners/blockcelerate.png">
+            </li>
+            <li>
+                <a href="https://polarisec.com" target="_blank">
+                    <img alt="Pic" src="assets/images/partners/polaris.svg" style="padding: 20px;">
+                </a>
+                <img alt="Pic" src="assets/images/partners/klaytn.png">
+            </li>
+        </ul>
+    </section>
 
-  <section class="container slider clients-section mobile hidden-md hidden-lg"
-           data-arrows="true"
-           data-paging="false"
-           data-timing="5000"
-  >
-    <ul class="slides" style="text-align: center">
-      <li class="row">
-        <a href="https://kyber.network/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/kyber.png">
-        </a>
-        <a href="https://request.network/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/request-network.png">
-        </a>
-      </li>
-      <li class="row">
-        <a href="https://drivezy.com/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/drivezy.png">
-        </a>
-        <a href="https://sentinelprotocol.io/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/sentinel-protocol.png">
-        </a>
-      </li>
-      <li class="row">
-        <a href="https://joyso.io/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/joyso.png">
-        </a>
-        <a href="https://quarkchain.io/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/quark-chain.png">
-        </a>
-      </li>
-      <li class="row">
-        <a href="https://www.drep.org/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/drep.png">
-        </a>
-        <a href="https://kleros.io/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/kleros.png">
-        </a>
-      </li>
-      <li class="row">
-        <a href="https://tomochain.com/" target="_blank">
-          <img alt="Pic" src="assets/images/clients/tomochain.png">
-        </a>
-        <a href="https://www.juncapital.io/" target="_blank">
-          <img alt="Pic" src="assets/images/partners/jun.png">
-        </a>
-      </li>
-      <li class="row">
-        <img alt="Pic" src="assets/images/partners/blockcelerate.png">
-        <img alt="Pic" src="assets/images/partners/klaytn.png">
-      </li>
-      <li class="row">
-        <a href="https://polarisec.com" target="_blank">
-          <img alt="Pic" src="assets/images/partners/polaris.svg" style="padding: 20px;">
-        </a>
-      </li>
-    </ul>
-  </section>
+    <section class="container slider clients-section mobile hidden-md hidden-lg"
+             data-arrows="true"
+             data-paging="false"
+             data-timing="5000"
+    >
+        <ul class="slides" style="text-align: center">
+            <li class="row">
+                <a href="https://kyber.network/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/kyber.png">
+                </a>
+                <a href="https://request.network/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/request-network.png">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://drivezy.com/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/drivezy.png">
+                </a>
+                <a href="https://sentinelprotocol.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/sentinel-protocol.png">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://joyso.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/joyso.png">
+                </a>
+                <a href="https://quarkchain.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/quark-chain.png">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://www.drep.org/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/drep.png">
+                </a>
+                <a href="https://kleros.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/kleros.png">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://xpool.app/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/x-pool.svg" style="max-width: 40%;margin-right: 16px;">
+                </a>
+                <a href="https://bscex.org/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/bscex.png" style="max-width: 40%; height: 70px">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://roseon.finance/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/roseon.png">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://tomochain.com/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/tomochain.png">
+                </a>
+                <a href="https://www.juncapital.io/" target="_blank">
+                    <img alt="Pic" src="assets/images/partners/jun.png">
+                </a>
+            </li>
+            <li class="row">
+                <img alt="Pic" src="assets/images/partners/blockcelerate.png">
+                <img alt="Pic" src="assets/images/partners/klaytn.png">
+            </li>
+            <li class="row">
+                <a href="https://polarisec.com" target="_blank">
+                    <img alt="Pic" src="assets/images/partners/polaris.svg" style="padding: 20px;">
+                </a>
+            </li>
+        </ul>
+    </section>
 
 <footer class="bg--white footer-1">
     <div class="container">
