add roseon and mercurial

--- a/partners.html
+++ b/partners.html
@@ -239,8 +239,16 @@
                     <a href="https://roseon.finance/" target="_blank">
                         <div class="card card-7">
                             <div class="card__image">
-                                <img alt="Pic" src="assets/images/clients/roseon.png"
-                                     style="padding: 16px;margin-right: 16px">
+                                <img alt="Pic" src="assets/images/clients/roseon.png">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6 col-sm-12">
+                    <a href="https://www.mercurial.finance" target="_blank">
+                        <div class="card card-7">
+                            <div class="card__image">
+                                <img alt="Pic" src="assets/images/clients/mercurial.png">
                             </div>
                         </div>
                     </a>
