--- a/security.html
+++ b/security.html
@@ -268,13 +268,16 @@
             </li>
             <li class="row">
                 <a href="https://xpool.app/" target="_blank" style="margin-right: 36px;">
-                    <img alt="Pic" src="assets/images/clients/x-pool.svg">
+                    <img alt="Pic" src="assets/images/clients/x-pool.svg" width="130">
                 </a>
                 <a href="https://bscex.org/" target="_blank" style="margin-right: 36px;">
-                    <img alt="Pic" src="assets/images/clients/bscex.png">
+                    <img alt="Pic" src="assets/images/clients/bscex.png" style="height: 60px; width: 180px">
                 </a>
                 <a href="https://roseon.finance/" target="_blank">
                     <img alt="Pic" src="assets/images/clients/roseon.png">
+                </a>
+                <a href="https://www.mercurial.finance/" target="_blank" style="margin-left: 16px;">
+                    <img alt="Pic" src="assets/images/clients/mercurial.png">
                 </a>
             </li>
             <li>
@@ -348,6 +351,9 @@
             <li class="row">
                 <a href="https://roseon.finance/" target="_blank">
                     <img alt="Pic" src="assets/images/clients/roseon.png">
+                </a>
+                <a href="https://www.mercurial.finance/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/mercurial.png">
                 </a>
             </li>
             <li class="row">
