fix mercurial logo

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <section class="container slider clients-section hidden-xs hidden-sm"
              data-arrows="true"
              data-paging="false"
-             data-timing="5000"
+             data-timing="500000"
              style="margin-top: 70px"
     >
         <ul class="slides" style="text-align: center">
@@ -242,7 +242,7 @@
                     <img alt="Pic" src="assets/images/clients/roseon.png">
                 </a>
                 <a href="https://www.mercurial.finance/" target="_blank" style="margin-left: 16px;">
-                    <img alt="Pic" src="assets/images/clients/mercurial.png">
+                    <img alt="Pic" src="assets/images/clients/mercurial.png" style="padding: 16px">
                 </a>
             </li>
             <li>
@@ -318,7 +318,7 @@
                     <img alt="Pic" src="assets/images/clients/roseon.png">
                 </a>
                 <a href="https://www.mercurial.finance/" target="_blank">
-                    <img alt="Pic" src="assets/images/clients/mercurial.png">
+                    <img alt="Pic" src="assets/images/clients/mercurial.png" style="padding: 16px">
                 </a>
             </li>
             <li class="row">
