--- a/partners.html
+++ b/partners.html
@@ -247,8 +247,9 @@
                 <div class="col-md-4 col-sm-6 col-sm-12">
                     <a href="https://www.mercurial.finance" target="_blank">
                         <div class="card card-7">
-                            <div class="card__image">
-                                <img alt="Pic" src="assets/images/clients/mercurial.png">
+                            <div class="card__image" style="padding:18px">
+                                <img alt="Pic" src="assets/images/clients/mercurial.png"
+                                     style="width: 60%;height: 60%;">
                             </div>
                         </div>
                     </a>
