--- a/services.html
+++ b/services.html
@@ -193,7 +193,7 @@
                     <img alt="Pic" src="assets/images/clients/roseon.png">
                 </a>
                 <a href="https://www.mercurial.finance/" target="_blank" style="margin-left: 16px;">
-                    <img alt="Pic" src="assets/images/clients/mercurial.png">
+                    <img alt="Pic" src="assets/images/clients/mercurial.png" style="padding: 16px">
                 </a>
             </li>
             <li>
@@ -269,7 +269,7 @@
                     <img alt="Pic" src="assets/images/clients/roseon.png">
                 </a>
                 <a href="https://www.mercurial.finance/" target="_blank">
-                    <img alt="Pic" src="assets/images/clients/mercurial.png">
+                    <img alt="Pic" src="assets/images/clients/mercurial.png" style="padding: 16px">
                 </a>
             </li>
             <li class="row">
