add galaxy and oppo to clients

--- a/security.html
+++ b/security.html
@@ -280,7 +280,7 @@
                     <img alt="Pic" src="assets/images/clients/mercurial.png" style="padding: 16px">
                 </a>
             </li>
-            <li>
+            <li class="row">
                 <a href="https://tomochain.com/" target="_blank">
                     <img alt="Pic" src="assets/images/clients/tomochain.png">
                 </a>
@@ -288,12 +288,18 @@
                     <img alt="Pic" src="assets/images/clients/everest-gold.png"
                          style="padding: 16px;margin-right: 16px">
                 </a>
+                <a href="https://www.oppo.com" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/oppo.png" style="width: 15%; height: 15%; margin-right: 18px">
+                </a>
+                <a href="https://www.galaxycine.vn/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/galaxy.png" style="width: 20%; height: 20%">
+                </a>
+            </li>
+            <li>
                 <a href="https://www.juncapital.io/" target="_blank">
                     <img alt="Pic" src="assets/images/partners/jun.png">
                 </a>
                 <img alt="Pic" src="assets/images/partners/blockcelerate.png">
-            </li>
-            <li>
                 <a href="https://polarisec.com" target="_blank">
                     <img alt="Pic" src="assets/images/partners/polaris.svg" style="padding: 20px;">
                 </a>
@@ -354,6 +360,15 @@
                 </a>
                 <a href="https://www.mercurial.finance/" target="_blank">
                     <img alt="Pic" src="assets/images/clients/mercurial.png" style="padding: 16px">
+                </a>
+            </li>
+            <li class="row">
+                <a href="https://www.oppo.com" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/oppo.png"
+                         style="width: 35%;height: 50px;margin-top: 22px;margin-right: 18px;">
+                </a>
+                <a href="https://www.galaxycine.vn/" target="_blank">
+                    <img alt="Pic" src="assets/images/clients/galaxy.png" style="width: 40%;height: 45px;">
                 </a>
             </li>
             <li class="row">
