--- a/partners.html
+++ b/partners.html
@@ -254,6 +254,27 @@
                         </div>
                     </a>
                 </div>
+
+                <div class="col-md-4 col-sm-6 col-sm-12">
+                    <a href="https://www.oppo.com" target="_blank">
+                        <div class="card card-7">
+                            <div class="card__image" style="padding:18px">
+                                <img alt="Pic" src="assets/images/clients/oppo.png"
+                                     style="width: 65%;height: 60%;">
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6 col-sm-12">
+                    <a href="https://www.galaxycine.vn" target="_blank">
+                        <div class="card card-7">
+                            <div class="card__image" style="padding:18px">
+                                <img alt="Pic" src="assets/images/clients/galaxy.png"
+                                     style="width: 80%;height: 80%;">
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 
